# sample-rust-cucumber-thirtyfour

./: Cargo.toml
src/: customerspage.rs  lib.rs
tests/: test_runner.rs
tests/features/: f01.feature
tests/stepdefinitions/: mod.rs  stepdefinition1.rs
